--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.name=college
 spring.datasource.url=jdbc:mysql://localhost:3306/college
 spring.datasource.username=root
-spring.datasource.password=raiyaan6511
+spring.datasource.password=zaeema@864
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
